--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Anuroop Youtube <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="#">Anuroop <span>by TEMPLATED</span></a></div>
 			</header>
 
 		<!-- Main -->
